--- a/res/layout/contact_item.xml
+++ b/res/layout/contact_item.xml
@@ -8,11 +8,12 @@
 
     <TextView
         android:id="@+id/tvContactName"
-        android:layout_marginRight="5dp"
         android:layout_width="wrap_content"
-        android:layout_weight="9"
         android:layout_height="wrap_content"
-        android:gravity="center"
+        android:paddingLeft="5dp"
+        android:layout_marginRight="5dp"
+        android:layout_weight="9"
+        android:gravity="left"
         android:textSize="17sp" />
 
     <CheckBox
