--- a/res/layout/participant_item.xml
+++ b/res/layout/participant_item.xml
@@ -6,7 +6,7 @@
     android:padding="@dimen/listview_padding" >
 
     <TextView
-        android:id="@+id/textView1"
+        android:id="@+id/tvParticipantName"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
