--- a/res/layout/participant_item.xml
+++ b/res/layout/participant_item.xml
@@ -2,16 +2,33 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="vertical"
+   android:layout_gravity="center_vertical"
     android:padding="@dimen/listview_padding" >
 
     <TextView
         android:id="@+id/tvParticipantName"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
+        android:layout_alignParentLeft="true"
+        android:layout_centerVertical="true"
         android:text="TextView"
         android:textSize="17sp" />
+
+    <Button
+        android:id="@+id/btnConstraint"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:layout_marginRight="10dp"
+        android:layout_toLeftOf="@+id/btnRemove"
+        android:text="@string/addConstraintKey" />
+
+    <Button
+        android:id="@+id/btnRemove"
+        android:layout_width="30dp"
+        android:layout_height="30dp"
+        android:layout_alignParentRight="true"
+        android:layout_centerVertical="true"
+        android:background="@drawable/delete_icon" />
 
 </RelativeLayout>
